--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/detalle-estacionamiento/detalle-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/detalle-estacionamiento/detalle-estacionamiento.component.css
@@ -58,6 +58,8 @@ strong {
     width: 100%;
     height: 500px;
     border-radius: 15px;
+    object-fit: cover; /*Para evitar distorison*/
+
 }
 
 .boton-regresar {
@@ -184,4 +186,32 @@ strong {
     vertical-align: middle;
     margin-bottom: 5px;
     /* Ajusta según sea necesario */
+}
+
+.imagen-por-defecto {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.contenedor-persona {
+    display: flex;
+}
+
+.div1 {
+    padding: 20px;
+    padding-top: 16px;
+    border-color: #0056b3;
+}
+
+.div2 {
+    padding: 20px;
+    text-align: left;
+    left: 50px;
+}
+
+    object-fit: cover;
+    /* Evita la distorsión manteniendo la relación de aspecto */
+    border-radius: 50%;
+    border: 2px solid #575757;
 }
