--- a/SAFE_PARKING_FRONT/src/app/components/reportes/cant-reservas-por-fecha/cant-reservas-por-fecha.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reportes/cant-reservas-por-fecha/cant-reservas-por-fecha.component.html
@@ -14,33 +14,15 @@
       </h2>
     </div>
     <div class="container">
-      <mat-form-field>
-        <mat-icon matPrefix class="search-icon">search</mat-icon>
-        <input
-          class="custom-search-input"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="Bucar por fecha"
-        />
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="date_reservation">
-          <th mat-header-cell *matHeaderCellDef>Fecha de Reserva</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.date_reservation | date }}
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="reservation_quantity">
-          <th mat-header-cell *matHeaderCellDef>Cantidad de Reserva</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.reservation_quantity }}
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+      <canvas
+        baseChart
+        [datasets]="barChartData"
+        [labels]="barChartLabels"
+        [options]="barChartOptions"
+        [legend]="barChartLegend"
+        [type]="barChartType"
+      >
+      </canvas>
     </div>
   </body>
 </html>
