--- a/SAFE_PARKING_FRONT/src/app/components/reportes/cant-reservas-por-usuario/cant-reservas-por-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reportes/cant-reservas-por-usuario/cant-reservas-por-usuario.component.html
@@ -14,36 +14,15 @@
       </h2>
     </div>
     <div class="container">
-      <mat-form-field class="custom-search-field">
-        <mat-icon matPrefix class="search-icon">search</mat-icon>
-        <input
-          class="custom-search-input"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="Buscar por usuario"
-        />
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="nameUser">
-          <th mat-header-cell *matHeaderCellDef>Codigo del Usuario</th>
-          <td mat-cell *matCellDef="let element">{{ element.nameUser }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="nameRole">
-          <th mat-header-cell *matHeaderCellDef>Nombre del usuario</th>
-          <td mat-cell *matCellDef="let element">{{ element.nameRole }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="quantityReservation">
-          <th mat-header-cell *matHeaderCellDef>Cantidad de Reservas</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.quantityReservation }}
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+      <canvas
+        baseChart
+        [datasets]="barChartData"
+        [labels]="barChartLabels"
+        [options]="barChartOptions"
+        [legend]="barChartLegend"
+        [type]="barChartType"
+      >
+      </canvas>
     </div>
   </body>
 </html>
