--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -12,15 +12,6 @@
     <div class="container" style="text-align: center">
       <h2>Registro de Comentario</h2>
       <form [formGroup]="form" (submit)="aceptar()" class="example-form">
-        <mat-form-field class="example-full-width" *ngIf="edicion">
-          <mat-label>codigo</mat-label>
-          <input
-            matInput
-            placeholder="Id"
-            formControlName="idComentario"
-            readonly="true"
-          />
-        </mat-form-field>
         <br />
 
         <mat-form-field class="example-full-width">
@@ -74,7 +65,6 @@
             placeholder="Ingrese fecha"
             [matDatepicker]="picker"
             formControlName="fechaCreacion"
-            [min]="minFecha"
             readonly="true"
           />
           <mat-hint>MM/DD/YYYY</mat-hint>
@@ -90,11 +80,16 @@
 
         <br />
         <div class="btn-container">
-          <button mat-raised-button color="primary">Registrar</button>
+          <button class="boton_registro" mat-raised-button color="primary">
+            Registrar
+          </button>
+          <button
+            mat-raised-button
+            [routerLink]="['/components/comentarios/listar_comentarios_admin']"
+          >
+            Cancelar
+          </button>
         </div>
-        <!--<button mat-raised-button color="warn" routerLink="/comentarios">
-                Cancelar
-            </button>-->
         <p>{{ mensaje }}</p>
       </form>
     </div>
