--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -56,13 +56,13 @@
                 placeholder="Ingrese fecha de Registro"
                 [matDatepicker]="picker"
                 formControlName="fechaRegistro"
-                [max]="maxFecha"
+                readonly="true"
               />
               <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle
+              <!--<mat-datepicker-toggle
                 matIconSuffix
                 [for]="picker"
-              ></mat-datepicker-toggle>
+              ></mat-datepicker-toggle>-->
               <mat-datepicker #picker></mat-datepicker>
               <mat-error
                 *ngIf="obtenerControlCampo('fechaRegistro')?.errors?.['required']"
@@ -112,6 +112,7 @@
                 matInput
                 placeholder="promedioValoracion"
                 formControlName="promedioValoracion"
+                readonly="true"
               />
               <mat-error
                 *ngIf="obtenerControlCampo('promedioValoracion')?.errors?.['required']"
@@ -141,7 +142,7 @@
                   *ngFor="let p of listaLocalizaciones"
                   [value]="p.idLocalizacion"
                 >
-                  {{ p.idLocalizacion }}
+                  {{ p.direccion }}
                 </mat-option>
               </mat-select>
               <mat-error
@@ -165,24 +166,33 @@
             </mat-form-field>
             <div class="image-upload">
               <input
-                class="example-full-width"
                 type="file"
                 (change)="onFileSelected($event)"
-                type="file"
-                alife-file-to-base64
                 accept="image/*"
-                formControlName="imagenVehiculo"
               />
+
               <img
-                *ngIf="imageSelected"
-                [src]="imageSelected"
-                alt="Imagen del Vehículo"
+                [src]="
+                  getImagenUrl() || 'assets/image/EstacionamientoDefault.jpg'
+                "
+                alt="Selected Image"
+                (error)="imagenNoCargada($event)"
               />
             </div>
           </div>
         </div>
         <div class="btn-container">
-          <button mat-raised-button color="primary">Registrar</button>
+          <button class="boton_registro" mat-raised-button color="primary">
+            Registrar
+          </button>
+          <button
+            mat-raised-button
+            [routerLink]="[
+              '/components/estacionamiento/listar_admin_estacionamientos'
+            ]"
+          >
+            Cancelar
+          </button>
         </div>
       </form>
     </div>
