--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
@@ -30,11 +30,22 @@ mat-form-field {
 
 /*Estilos para los botones*/
 
-button {
-  margin: 10px;
+button.boton_registro:hover {
+  background-color: #080808;
+   color: #fff;
 }
 
-.btn-container button {
+.btn-container {
+  justify-content: center;
+  text-align: center;
+  margin: 5px;
+}
+mat-error {
+  color: #e74c3c;
+}
+
+.boton_registro{
   background-color: #11998e;
   color: #fff;
+  margin-right: 10px;
 }
