--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
@@ -2,13 +2,11 @@
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #11998e, #38ef7d);
-    margin-left: 270px;
+    margin-left: 250px;
     height: auto;
+    padding: 60px;
+}
 
-}
-.header{
-padding: 50px;
-}
 h2 {
     text-align: center;
 }
@@ -16,13 +14,14 @@ h2 {
 .estacionamientos-container {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 145px;
+    height: auto;
+    width: auto;
 }
 
 .estacionamiento-card {
     width: 300px;
     height: 400px;
-    margin: 16px;
+    margin: 10px;
     position: relative;
     border-radius: 13px;
     overflow: hidden;
