--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.html
@@ -22,12 +22,17 @@
       <div class="generic-details" *ngIf="hrs_estacionamiento">
         <h2 class="generic-heading">Detalles del Horario Estacionamiento</h2>
         <div class="generic-box">
-          <h1>Id de estacionamiento</h1>
-          <p>{{ hrs_estacionamiento.estacionamiento.idEstacionamiento }}</p>
+          <h1>Direccion estacionamiento</h1>
+          <p>
+            {{ hrs_estacionamiento.estacionamiento.localizacion.direccion }}
+          </p>
         </div>
         <div class="generic-box">
-          <h1>Id de horario</h1>
-          <p>{{ hrs_estacionamiento.horario.idHorario }}</p>
+          <h1>Horario</h1>
+          <p>
+            {{ hrs_estacionamiento.horario.horaApertura }} {{ "-" }}
+            {{ hrs_estacionamiento.horario.horaCierre }}
+          </p>
         </div>
       </div>
     </div>
