--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
@@ -72,7 +72,13 @@
 
         <br />
         <div class="btn-container">
-          <button mat-raised-button color="primary">Registrar</button>
+          <button class="boton_registro" mat-raised-button>Registrar</button>
+          <button
+            mat-raised-button
+            [routerLink]="['/components/horarios/listar_admin_horarios']"
+          >
+            Cancelar
+          </button>
         </div>
       </form>
     </div>
