--- a/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
@@ -92,6 +92,12 @@
         </mat-form-field>
 
         <button class="boton" mat-raised-button>Registrar</button>
+        <button
+          mat-raised-button
+          [routerLink]="['/components/membresias/listar_admin_membresias']"
+        >
+          Cancelar
+        </button>
       </form>
     </div>
   </body>
