--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.css
@@ -1,6 +1,8 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
+  align-items: center;
+  height: 100vh;
 
 }
 
@@ -17,11 +19,10 @@ body {
 .membership-list {
   list-style: none;
   padding: 0;
-  width: 500px;
+  width: 70%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    align-items: center;
