--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -14,14 +14,6 @@
         <h2>Registro de Reserva Estacionamiento</h2>
         <form [formGroup]="form" (submit)="aceptar()" class="example-form">
           <mat-form-field class="example-full-width" *ngIf="edicion">
-            <mat-label>idReservaEstacionamiento</mat-label>
-            <input
-              matInput
-              placeholder="idReservaEstacionamiento"
-              formControlName="idReservaEstacionamiento"
-            />
-          </mat-form-field>
-          <mat-form-field class="example-full-width" *ngIf="edicion">
             <mat-label>Estado</mat-label>
             <mat-select formControlName="estado">
               <mat-option *ngFor="let p of estado" [value]="p.value">
@@ -57,7 +49,6 @@
               placeholder="Ingrese fecha"
               [matDatepicker]="picker"
               formControlName="fecha"
-              [min]="minFecha"
               readonly="true"
             />
             <mat-hint>MM/DD/YYYY</mat-hint>
@@ -124,7 +115,17 @@
           </mat-form-field>
           <br />
           <div class="btn-container">
-            <button mat-raised-button color="primary">Registrar</button>
+            <button class="boton_registro" mat-raised-button color="primary">
+              Registrar
+            </button>
+            <button
+              mat-raised-button
+              [routerLink]="[
+                '/components/reservaestacionamiento/listar_admin_reserva_estacionamientos'
+              ]"
+            >
+              Cancelar
+            </button>
           </div>
         </form>
       </div>
