--- a/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
@@ -1,8 +1,6 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,6 +15,7 @@ body {
   text-align: center;
   max-width: 400px;
   width: 100%;
+  margin-bottom: 100px;
 }
 
 img {
