--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.html
@@ -39,7 +39,18 @@
             <h1>Membresia del usuario</h1>
             <p>{{ usu.membresia.tipoMembresia }}</p>
           </div>
-
+          <div class="info-box">
+            <h1>Imagen</h1>
+            <div class="col-md-6">
+              <img
+                mat-card-image
+                [src]="getImagenUrl()"
+                (error)="imagenNoCargada($event)"
+                alt="Foto del estacionamiento"
+                class="responsive-img"
+              />
+            </div>
+          </div>
           <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
         </div>
       </div>
