--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -80,13 +80,6 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="imagen">
-          <th mat-header-cell *matHeaderCellDef>Imagen</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.imagen }}
-          </td>
-        </ng-container>
-
         <ng-container matColumnDef="fechaNacimiento">
           <th mat-header-cell *matHeaderCellDef>Fecha Nacimiento</th>
           <td mat-cell *matCellDef="let element">
@@ -121,10 +114,7 @@
             <button
               class="botoncito1"
               mat-raised-button
-              [routerLink]="[
-                '/usuarios/modificar_usuarios/',
-                element.idUsuario
-              ]"
+              [routerLink]="['ediciones', element.idUsuario]"
             >
               <mat-icon>edit</mat-icon>
             </button>
