--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.css
@@ -76,3 +76,14 @@ body{
   font-size: 1em;
   color: #000000;
 }
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin: 10px;
+}
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+  max-height: 200px; /* Set a maximum height if needed */
+}
