--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
@@ -3,8 +3,8 @@ body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 260px;
-  padding: 60px;
-
+  padding:50px;
+  height: 100vh;
 }
 .container {
   margin-bottom: 50px;
@@ -12,16 +12,13 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   /* Centra horizontalmente */
-  margin-top: 50px;
   max-width: 100%;
   padding: 20px;
-  margin: 30px;
 }
 
 .example-form{
   max-height: 600px;
   max-width: 100%;
-
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -64,6 +61,7 @@ h2 {
   max-height: 90%;
   margin: 0 20px;
 }
+
 
 /* Style the buttons */
 .btn-container {
